update Y0826A2