@@ -14,8 +14,8 @@ repositories {
 }
 
 java {
-	targetCompatibility = JavaVersion.VERSION_1_8
-	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
@@ -25,4 +25,18 @@ dependencies {
 
 tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
+	options.compilerArgs.addAll([
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+			"--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+			"--add-exports", "java.base/sun.reflect.annotation=ALL-UNNAMED"
+	])
 }
